--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -5,21 +5,17 @@ html {
 
 .header {
     width: 140%;
+    height: 55px;
     margin: 0;
     padding: 10px 0;
     background-color: #000;
 }
 
 .header__inner {
-    width: 100%;
     padding: 0 15px;
-    text-align: left;
 }
 
-.header__logo {
-    color: #fff;
-    text-decoration: none;
-    font-weight: bold;
-    font-size: 25px;
-    font-family: "Times New Roman", "MS Mincho", "serif";
+.header--item{
+    width: 18%;
+    height: auto;
 }
