--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -1,10 +1,10 @@
 html {
-    max-width: 1540px;
+    width: 100%;
     font-size: 10px;
 }
 
 .header {
-    width: 140%;
+    width: 100%;
     height: 55px;
     margin: 0;
     padding: 10px 0;
@@ -12,10 +12,17 @@ html {
 }
 
 .header__inner {
-    padding: 0 15px;
+    margin-top: 5px;
+    margin-left: 1%;
+    width: 40%;
 }
 
-.header--item{
-    width: 18%;
-    height: auto;
+.header--item {
+    width: 20%;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
 }
