--- a/src/public/css/exhibition.css
+++ b/src/public/css/exhibition.css
@@ -1,51 +1,76 @@
+.header-nav {
+    display: flex;
+    width: 90%;
+    position: relative;
+    left: 10%;
+    bottom: 43px;
+}
+
 .nav__search {
-    width: 40%;
-    height: 40px;
-    position: absolute;
-    left: 30%;
-    top: 9px;
+    margin-left:  5%;
+    margin-right: 3%;
+    width: 50%;
+    height: 50px;
 }
 
 .nav__search--text {
+    padding-left: 5%;
     width: 100%;
-    height: 40px;
-    padding-left: 15px;
-    font-size: 1.5rem;
+    font-size: 1.8vw;
     border-radius: 5px;
     border: none;
 }
 
-.nav__container {
-    width: 55%;
-    display: flex;
-    position: absolute;
-    left: 80%;
-    top: 15px;
+.nav__logout,
+.nav__mypage {
+    width: 10%;
+}
+
+.nav__logout {
+    margin-left: 10%;
 }
 
 .logout-link,
 .mypage-link {
-    margin-left: 15px;
-    font-size: 1.5rem;
+    display: block;
+    width: 100%;
+    font-size: 1.3vw;
     color: #fff;
     text-decoration: none;
 }
 
 .sell-link {
-    margin-top: 3px;
-    margin-left: 15px;
-    padding: 6px 12px;
-    font-size: 1.5rem;
+    display: block;
+    margin-left: 50%;
+    padding: 3px 15px;
+    width: 100%;
+    font-size: 1.3vw;
     border-radius: 5px;
     text-decoration: none;
     color: #000;
     background-color: #fff;
 }
 
+.image-detail__container {
+    display: flex;
+}
+
 .product__detail {
-    width: 500px;
-    margin-top:  80px;
-    margin-left: 60%;
+    width: 60%;
+    margin-top:  30px;
+    margin-left: 15%;
+}
+
+.product__image {
+    margin-top: 30px;
+    margin-left: 5%;
+    width:  40%;
+    height: auto;
+}
+
+.product__image--item {
+    width: 100%;
+    height: auto;
 }
 
 .product__name--text {
@@ -64,6 +89,7 @@
     width: 100px;
     font-size: 1rem;
     border: none;
+    outline: none;
 }
 
 .product__price {
@@ -94,21 +120,19 @@
     font-size: 2rem;
 }
 
-.purchase__link {
-    padding: 5px 10px;
-    margin-top: 15px;
-    width: 60%;
-    background-color: #FF5555;
-}
-
 .purchase__link--button {
-    padding: 5px 30px;
-    margin-left: 20%;
-    font-size: 1.5rem;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    display: block;
+    padding: 5px 10px;
+    width: 60%;
+    font-size: 1.5vw;
     font-weight: bold;
+    background-color: #FF5555;
+    text-align: center;
     text-decoration: none;
-    border: none;
     color: #fff;
+    cursor: pointer;
 }
 
 .product__explain {
@@ -127,18 +151,20 @@
 }
 
 .explain__color--text {
-    width: 100px;
+    width: 250px;
     border: none;
     outline: none;
 }
 
-.explain__detail {
+.explain__description {
     margin-top: 20px;
+    width: 28rem;
 }
 
-.explain__detail--text {
-    height: 100px;
-    width: 60%;
+.explain__description--text {
+    width: 100%;
+    border: none;
+    outline: none;
 }
 
 .product__info {
@@ -190,6 +216,7 @@
     margin-left: 3%;
     font-size: 1.2rem;
     border: none;
+    outline: none;
 }
 
 .product__comment {
@@ -257,7 +284,7 @@
 .form__button-submit {
     padding: 5px 10px;
     width: 60%;
-    font-size: 1.3rem;
+    font-size: 1.5vw;
     font-weight: bold;
     background-color: #FF5555;
     border: none;
