--- a/src/public/css/edit.css
+++ b/src/public/css/edit.css
@@ -1,40 +1,50 @@
-.nav__search{
-    width: 40%;
-    height: 40px;
-    position: absolute;
-    left: 30%;
-    top: 9px;
+.header-nav {
+    display: flex;
+    width: 90%;
+    position: relative;
+    left: 10%;
+    bottom: 43px;
+}
+
+.nav__search {
+    margin-left: 5%;
+    margin-right: 3%;
+    width: 50%;
+    height: 50px;
 }
 
 .nav__search--text {
+    padding-left: 5%;
     width: 100%;
-    height: 40px;
-    padding-left: 15px;
-    font-size: 1.5rem;
+    font-size: 1.8vw;
     border-radius: 5px;
     border: none;
 }
 
-.nav__container {
-    width: 55%;
-    display: flex;
-    position: absolute;
-    left: 80%;
-    top: 15px;
+.nav__logout,
+.nav__mypage {
+    width: 10%;
 }
 
-.logout-link , .mypage-link {
-    margin-left: 15px;
-    font-size: 1.5rem;
+.nav__logout {
+    margin-left: 10%;
+}
+
+.logout-link,
+.mypage-link {
+    display: block;
+    width: 100%;
+    font-size: 1.3vw;
     color: #fff;
     text-decoration: none;
 }
 
 .sell-link {
-    margin-top: 3px;
-    margin-left: 15px;
-    padding: 6px 12px;
-    font-size: 1.5rem;
+    display: block;
+    margin-left: 50%;
+    padding: 3px 15px;
+    width: 100%;
+    font-size: 1.3vw;
     border-radius: 5px;
     text-decoration: none;
     color: #000;
