--- a/src/public/css/purchase.css
+++ b/src/public/css/purchase.css
@@ -1,41 +1,50 @@
+.header-nav {
+    display: flex;
+    width: 90%;
+    position: relative;
+    left: 10%;
+    bottom: 43px;
+}
+
 .nav__search {
-    width: 40%;
-    height: 40px;
-    position: absolute;
-    left: 30%;
-    top: 9px;
+    margin-left: 5%;
+    margin-right: 3%;
+    width: 50%;
+    height: 50px;
 }
 
 .nav__search--text {
+    padding-left: 5%;
     width: 100%;
-    height: 40px;
-    padding-left: 15px;
-    font-size: 1.5rem;
+    font-size: 1.8vw;
     border-radius: 5px;
     border: none;
 }
 
-.nav__container {
-    width: 55%;
-    display: flex;
-    position: absolute;
-    left: 80%;
-    top: 15px;
+.nav__logout,
+.nav__mypage {
+    width: 10%;
+}
+
+.nav__logout {
+    margin-left: 10%;
 }
 
 .logout-link,
 .mypage-link {
-    margin-left: 15px;
-    font-size: 1.5rem;
+    display: block;
+    width: 100%;
+    font-size: 1.3vw;
     color: #fff;
     text-decoration: none;
 }
 
 .sell-link {
-    margin-top: 3px;
-    margin-left: 15px;
-    padding: 6px 12px;
-    font-size: 1.5rem;
+    display: block;
+    margin-left: 50%;
+    padding: 3px 15px;
+    width: 100%;
+    font-size: 1.3vw;
     border-radius: 5px;
     text-decoration: none;
     color: #000;
@@ -45,19 +54,22 @@
 .comment-form {
     width: 90%;
     margin-top: 80px;
+    display: flex;
 }
 
 .product__box-left {
+    width: 60%;
     margin-left: 5%;
 }
 
 .product__container{
+    width: 100%;
     display: flex;
 }
 
 .product__image {
     margin-left: 5%;
-    width: 15%;
+    width: 25%;
 }
 
 .product__image--item {
@@ -91,7 +103,7 @@
 
 .product__pay {
     margin-top: 30px;
-    width: 45%;
+    width: 90%;
     border-top: 1px solid #000;
 }
 
@@ -110,7 +122,8 @@
 
 .product__deliver {
     padding-bottom: 15px;
-    width: 45%;
+    margin-bottom: 50px;
+    width: 90%;
     border-top: 1px solid #000;
     border-bottom: 1px solid #000;
 }
@@ -138,7 +151,6 @@
 
 .product__postal {
     margin-top: 20px;
-    background-color: blue;
 }
 
 .deliver__address {
@@ -174,8 +186,6 @@
 }
 
 .product__box-right {
-    position: relative;
-    left: 55%;
     bottom: 400px;
 }
 
@@ -202,19 +212,16 @@
     border: none;
 }
 
-.purchase__link {
-    padding: 5px 10px;
-    margin-top: 50px;
-    width: 28rem;
-    background-color: #FF5555;
-}
-
 .purchase__link--button {
-    padding: 5px 30px;
-    margin-left: 20%;
-    font-size: 1.5rem;
+    display: block;
+    padding: 10px 0;
+    margin-top: 30px;
+    width: 100%;
+    font-size: 1.3vw;
     font-weight: bold;
     text-decoration: none;
+    text-align: center;
     border: none;
+    background-color: #FF5555;
     color: #fff;
 }
