--- a/src/public/css/register.css
+++ b/src/public/css/register.css
@@ -36,7 +36,7 @@
     width: 50%;
     padding: 15px;
     font-weight: bold;
-    font-size: 1.5rem;
+    font-size: 1.5vw;
     color: #fff;
     text-align: center;
     background-color: #FF5555;
@@ -46,11 +46,11 @@
 }
 
 .login__link {
-    margin: 30px 0 80px 47%;
+    margin: 30px 0 80px 45%;
 }
 
 .login__link--button {
-    font-size: 1.5rem;
+    font-size: 1.5vw;
     text-decoration: none;
     cursor: pointer;
 }
