--- a/src/public/css/address.css
+++ b/src/public/css/address.css
@@ -90,7 +90,7 @@
     width: 50%;
     padding: 15px;
     font-weight: bold;
-    font-size: 1.5rem;
+    font-size: 1.5vw;
     color: #fff;
     text-align: center;
     background-color: #FF5555;
