--- a/src/public/css/purchase.css
+++ b/src/public/css/purchase.css
@@ -7,7 +7,7 @@
 }
 
 .nav__search {
-    margin-left: 5%;
+    margin-left: 8%;
     margin-right: 3%;
     width: 50%;
     height: 50px;
@@ -21,31 +21,39 @@
     border: none;
 }
 
-.nav__logout,
-.nav__mypage {
-    width: 10%;
+.form-log {
+    width: 11%;
 }
 
-.nav__logout {
-    margin-left: 10%;
-}
-
-.logout-link,
-.mypage-link {
-    display: block;
+.logout-link {
+    margin-top: 2px;
     width: 100%;
+    font-size: 1.3vw;
+    border: none;
+    color: #fff;
+    background-color: #000;
+    cursor: pointer;
+}
+
+.mypage-link {
+    margin-top: 4px;
+    margin-left: 3%;
+    display: block;
+    width: 10%;
     font-size: 1.3vw;
     color: #fff;
     text-decoration: none;
 }
 
 .sell-link {
+    margin-left: 3%;
     display: block;
-    margin-left: 50%;
-    padding: 3px 15px;
-    width: 100%;
+    width: 10%;
+    height: 30px;
+    line-height: 30px;
     font-size: 1.3vw;
     border-radius: 5px;
+    text-align: center;
     text-decoration: none;
     color: #000;
     background-color: #fff;
@@ -84,19 +92,19 @@
 .product__name {
     margin-left: 10%;
     width: 80%;
-    font-size: 2rem;
+    font-size: 2vw;
     font-weight: bold;
 }
 
 .product__price {
     width: 60%;
-    margin-top: -15px;
+    margin-top: -10px;
     margin-left: 10%;
 }
 
 .price--text {
     width: 100%;
-    font-size: 2rem;
+    font-size: 2vw;
     border: none;
     outline: none;
 }
@@ -109,15 +117,15 @@
 
 .pay__name {
     margin-left: 5%;
-    font-size: 1.5rem;
+    font-size: 1.8vw;
     font-weight: bold;
 }
 
 .pay__select {
     margin: 15px 0 30px 10%;
     padding: 3px 10px;
-    width: 70%;
-    font-size: 1.2rem;
+    width: 50%;
+    font-size: 1.5vw;
 }
 
 .product__deliver {
@@ -135,17 +143,17 @@
 .deliver__name {
     margin-left: 5%;
     width: 50%;
-    font-size: 1.5rem;
+    font-size: 1.8vw;
     font-weight: bold;
 }
 
 .deliver__link {
-    margin-top: 10px;
+    margin-top: 4%;
     margin-left: 10%;
 }
 
 .address-link {
-    font-size: 1.5rem;
+    font-size: 1.8vw;
     text-decoration: none;
 }
 
@@ -155,7 +163,7 @@
 
 .deliver__address {
     margin-top: 10px;
-    margin-left: 20%;
+    margin-left: 5%;
 }
 
 .deliver__postal {
@@ -164,7 +172,7 @@
 
 .postal__number {
     width: 100%;
-    font-size: 1.5rem;
+    font-size: 1.2vw;
     border: none;
 }
 
@@ -175,24 +183,26 @@
 
 .user__address--text {
     width: 100%;
-    font-size: 1.5rem;
+    font-size: 1.2vw;
     border: none;
 }
 
 .user__building--text {
     width: 100%;
-    font-size: 1.5rem;
+    font-size: 1.2vw;
     border: none;
 }
 
 .product__box-right {
+    width: 45%;
     bottom: 400px;
 }
 
 .product__summary {
+    width: 100%;
     border-collapse: collapse;
     border: 1px solid #000;
-    font-size: 1.5rem;
+    font-size: 1.5vw;
 }
 
 .product__summary th,
@@ -207,8 +217,11 @@
 }
 
 .product__summary input {
+    margin-right: auto;
+    margin-left: 20%;
     padding: 5px;
-    width: 100%;
+    width: 70%;
+    font-size: 1.5vw;
     border: none;
 }
 
