--- a/src/public/css/exhibition.css
+++ b/src/public/css/exhibition.css
@@ -166,11 +166,12 @@
 
 .explain__description {
     margin-top: 20px;
-    width: 28rem;
+    width: 60%;
 }
 
 .explain__description--text {
     width: 100%;
+    height: 100px;
     border: none;
     outline: none;
 }
@@ -233,9 +234,11 @@
 
 .comment--text {
     width: 230px;
+    height: auto;
     font-size: 2rem;
     font-weight: bold;
     color: #5F5F5F;
+    outline: none;
 }
 
 .comment__figure {
@@ -243,11 +246,21 @@
     font-size: 2rem;
     font-weight: bold;
     border: none;
+    outline: none;
     color: #5F5F5F;
 }
 
 .user__info {
     margin-top: 30px;
+}
+
+.user__info-detail {
+    width: 100%;
+}
+
+.user__image--item {
+    width: 10%;
+    height: auto;
 }
 
 .user__name {
@@ -256,6 +269,7 @@
     font-size: 1.5rem;
     font-weight: bold;
     border: none;
+    outline: none;
 }
 
 .user__comment {
@@ -265,8 +279,10 @@
 
 .user__comment--text {
     width: 100%;
+    height: 100px;
     padding: 10px;
     border: none;
+    outline: none;
     background-color: #ddcfcf;
 }
 
