--- a/src/public/css/exhibition.css
+++ b/src/public/css/exhibition.css
@@ -7,7 +7,7 @@
 }
 
 .nav__search {
-    margin-left:  8%;
+    margin-left: 8%;
     margin-right: 3%;
     width: 50%;
     height: 50px;
@@ -59,20 +59,66 @@
     background-color: #fff;
 }
 
+.no__login-link {
+    display: block;
+    position: relative;
+    left: 65%;
+    bottom: 90px;
+    width: 10%;
+    height: 20px;
+    font-size: 1.3vw;
+    text-align: center;
+    text-decoration: none;
+    color: #fff;
+    background-color: #000;
+    cursor: pointer;
+}
+
+.no__login-mypage-link {
+    display: block;
+    position: relative;
+    left: 76%;
+    bottom: 110px;
+    width: 10%;
+    height: 20px;
+    font-size: 1.3vw;
+    text-align: center;
+    color: #fff;
+    background-color: #000;
+    text-decoration: none;
+}
+
+.no__login-sell-link {
+    display: block;
+    position: relative;
+    left: 89.2%;
+    bottom: 131px;
+    width: 9%;
+    height: 30px;
+    line-height: 30px;
+    font-size: 1.3vw;
+    border-radius: 5px;
+    text-align: center;
+    text-decoration: none;
+    color: #000;
+    background-color: #fff;
+}
+
 .image-detail__container {
     display: flex;
+    transform: translateY(-35px);
 }
 
 .product__detail {
     width: 60%;
-    margin-top:  30px;
+    margin-top: 30px;
     margin-left: 15%;
 }
 
 .product__image {
     margin-top: 30px;
     margin-left: 5%;
-    width:  40%;
+    width: 40%;
     height: auto;
 }
 
@@ -83,49 +129,76 @@
 
 .product__name--text {
     width: 250px;
-    font-size: 2.5rem;
+    font-size: 3vw;
     font-weight: bold;
     border: none;
     outline: none;
 }
 
 .product__brand {
-    margin-top:5px;
+    margin-top: 5px;
 }
 
 .product__brand--text {
     width: 100px;
-    font-size: 1rem;
+    font-size: 1.5vw;
     border: none;
     outline: none;
 }
 
 .product__price {
-    margin-top:  15px;
+    margin-top: 15px;
 }
 
 .price--mark {
-    font-size: 1.2rem;
+    font-size: 1.7vw;
 }
 
 .product__price--text {
-    width: 200px;
-    font-size: 2rem;
+    width: 60%;
+    font-size: 2vw;
     border: none;
     outline: none;
 }
 
 .product__mark {
-    margin-left: 5%;
+    width: 30%;
+    height: 120px;
+    table-layout: fixed;
+}
+
+.product__mark td {
+    transform: translateY(-25px);
 }
 
 .mark__check {
     display: none;
 }
 
-.mark__button {
-    margin-left: 5px;
-    font-size: 2rem;
+.mark__button--like {
+    font-size: 3vw;
+    cursor: pointer;
+}
+
+.no-mark__button--like {
+    font-size: 3vw;
+}
+
+.mark__button--comment {
+    font-size: 3vw;
+}
+
+.mark__count {
+    width: 100%;
+    font-size: 1.5vw;
+    text-align: center;
+    border: none;
+    outline: none;
+}
+
+.mark__check:checked+.mark__button--like {
+    background-color: #dff306;
+    color: #000;
 }
 
 .purchase__link--button {
@@ -143,23 +216,38 @@
     cursor: pointer;
 }
 
+.no-purchase__link--button {
+    margin-top: 15px;
+    margin-bottom: 15px;
+    display: block;
+    padding: 5px 10px;
+    width: 60%;
+    font-size: 1.5vw;
+    font-weight: bold;
+    background-color: #a79292;
+    text-align: center;
+    text-decoration: none;
+    color: #fff;
+    cursor: pointer;
+}
+
 .product__explain {
     margin-top: 20px;
 }
 
 .explain__header {
-    width: 200px;
-    font-size: 2rem;
+    width: 60%;
+    font-size: 2vw;
     font-weight: bold;
 }
 
 .explain__color {
     margin-top: 20px;
-    font-size: 1.2rem;
 }
 
 .explain__color--text {
-    width: 250px;
+    width: 60%;
+    font-size: 1.5vw;
     border: none;
     outline: none;
 }
@@ -172,6 +260,7 @@
 .explain__description--text {
     width: 100%;
     height: 100px;
+    font-size: 1.2vw;
     border: none;
     outline: none;
 }
@@ -181,8 +270,8 @@
 }
 
 .info__header {
-    width: 200px;
-    font-size: 2rem;
+    width: 60%;
+    font-size: 2vw;
     font-weight: bold;
 }
 
@@ -191,7 +280,7 @@
 }
 
 .category__list--item {
-    font-size: 1.2rem;
+    font-size: 1.5vw;
     font-weight: bold;
 }
 
@@ -202,7 +291,7 @@
 .category__button {
     padding: 3px 1.7%;
     margin-left: 3%;
-    font-size: 0.8rem;
+    font-size: 1.2vw;
     font-weight: bold;
     border-radius: 10px;
     border: none;
@@ -216,14 +305,14 @@
 }
 
 .product__condition--item {
-    font-size: 1.2rem;
+    font-size: 1.5vw;
     font-weight: bold;
 }
 
 .condition--text {
-    width: 150px;
+    width: 60%;
     margin-left: 3%;
-    font-size: 1.2rem;
+    font-size: 1.2vw;
     border: none;
     outline: none;
 }
@@ -234,17 +323,17 @@
 }
 
 .comment--text {
-    width: 230px;
+    width: 60%;
     height: auto;
-    font-size: 2rem;
+    font-size: 2vw;
     font-weight: bold;
     color: #5F5F5F;
     outline: none;
 }
 
 .comment__figure {
-    width: 200px;
-    font-size: 2rem;
+    width: 60%;
+    font-size: 2vw;
     font-weight: bold;
     border: none;
     outline: none;
@@ -266,8 +355,8 @@
 
 .user__name {
     margin-left: 20px;
-    width: 150px;
-    font-size: 1.5rem;
+    width: 60%;
+    font-size: 1.5vw;
     font-weight: bold;
     border: none;
     outline: none;
@@ -282,6 +371,7 @@
     width: 100%;
     height: 100px;
     padding: 10px;
+    font-size: 1.2vw;
     border: none;
     outline: none;
     background-color: #ddcfcf;
@@ -289,29 +379,50 @@
 
 .form__group {
     margin-top: 30px;
+    width: 60%;
 }
 
 .comment__logo {
-    font-size: 1.5rem;
+    font-size: 1.5vw;
     font-weight: bold;
 }
 
 .form__textarea--text {
-    width: 60%;
+    width: 100%;
     height: 100px;
+    border: 2px solid #000;
 }
 
-.form__button {  
+.form__button {
     margin-top: 15px;
     margin-bottom: 80px;
+    width: 100%;
 }
 
 .form__button-submit {
     padding: 5px 10px;
-    width: 60%;
+    width: 100%;
     font-size: 1.5vw;
     font-weight: bold;
     background-color: #FF5555;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+}
+
+.no-form__button {
+    margin-top: 15px;
+    margin-bottom: 80px;
+    width: 100%;
+}
+
+.no-form__button-submit {
+    padding: 5px 10px;
+    width: 100%;
+    font-size: 1.5vw;
+    font-weight: bold;
+    text-align: center;
+    background-color: #a79292;
     border: none;
     color: #fff;
     cursor: pointer;
