--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -26,8 +26,9 @@
 }
 
 .logout-link {
-    margin-top: 2px;
+    margin-bottom: 4px;
     width: 100%;
+    height: 20px;
     font-size: 1.3vw;
     border: none;
     color: #fff;
@@ -36,10 +37,11 @@
 }
 
 .mypage-link {
-    margin-top: 4px;
+    margin-top: 2px;
     margin-left: 3%;
     display: block;
     width: 10%;
+    height: 30px;
     font-size: 1.3vw;
     color: #fff;
     text-decoration: none;
@@ -59,10 +61,69 @@
     background-color: #fff;
 }
 
+.no__login-link {
+    display: block;
+    position: relative;
+    left: 66%;
+    bottom: 90px;
+    width: 7%;
+    height: 20px;
+    font-size: 1.3vw;
+    text-align: center;
+    text-decoration: none;
+    color: #fff;
+    background-color: #000;
+    cursor: pointer;
+}
+
+.no__login-mypage-link {
+    display: block;
+    position: relative;
+    left: 77%;
+    bottom: 110px;
+    width: 8%;
+    height: 20px;
+    font-size: 1.3vw;
+    text-align: center;
+    color: #fff;
+    background-color: #000;
+    text-decoration: none;
+}
+
+.no__login-sell-link {
+    display: block;
+    position: relative;
+    left: 89.2%;
+    bottom: 131px;
+    width: 9%;
+    height: 30px;
+    line-height: 30px;
+    font-size: 1.3vw;
+    border-radius: 5px;
+    text-align: center;
+    text-decoration: none;
+    color: #000;
+    background-color: #fff;
+}
+
+.main__frame {
+    position: relative;
+    bottom: 70px;
+}
+
 .main-nav {
     width: 100%;
     display: flex;
     border-bottom: 1px solid #000;
+    transform: translateY(-15px);
+}
+
+.no-login-main-nav {
+    width: 100%;
+    display: flex;
+    border-bottom: 1px solid #000;
+    position: relative;
+    bottom: 60px;
 }
 
 .nav__recommend {
@@ -74,15 +135,15 @@
 }
 
 .recommend-link {
-    font-size: 2rem;
+    font-size: 2vw;
     font-weight: bold;
     text-decoration: none;
     color: #000;
     cursor: pointer;
 }
 
-.mylist-link{
-    font-size: 2rem;
+.mylist-link {
+    font-size: 2vw;
     font-weight: bold;
     text-decoration: none;
     color: #FF5555;
@@ -108,8 +169,7 @@
 
 .name--text {
     width: 100%;
-    font-size: 1.5rem;
-    font-weight:  bold;
+    font-size: 1.5vw;
+    font-weight: bold;
     border: none;
 }
-
