--- a/src/public/css/exhibition.css
+++ b/src/public/css/exhibition.css
@@ -184,6 +184,10 @@
     font-size: 3vw;
 }
 
+.no-like__link--mark {
+    font-size: 3vw;
+}
+
 .mark__button--comment {
     font-size: 3vw;
 }
@@ -391,6 +395,7 @@
     width: 100%;
     height: 100px;
     border: 2px solid #000;
+    cursor: pointer;
 }
 
 .form__button {
