--- a/src/public/css/edit.css
+++ b/src/public/css/edit.css
@@ -1,34 +1,39 @@
 .profile-header {
-    width: 300px;
+    width: 80%;
     margin: 80px auto 0px;
 }
 
 .profile-header__logo {
-    font-size: 2rem;
+    width: 100%;
+    font-size: 2.5vw;
     text-align: center;
 }
 
 .form__group {
     margin-top: 80px;
-    margin-left: 35%;
+    margin-left: 20%;
 }
 
 .form__group-title {
-    width: 150px;
+    width: 80%;
     margin-top: 30px;
     font-weight: bold;
-    font-size: 1.5rem;
+    font-size: 2vw;
 }
 
 .form__image {
-    margin-left: 20%;
     margin-bottom: 100px;
+}
+
+.user__image {
+    width: 25%;
+    border-radius: 50%;
 }
 
 .form__image--button {
     padding: 7px;
     font-weight: bold;
-    font-size: 1.2rem;
+    font-size: 1.8vw;
     border: 3px solid #FF9595;
     border-radius: 10px;
     color: #FF9595;
@@ -40,8 +45,9 @@
 }
 
 .form__input {
-    width: 50%;
+    width: 70%;
     padding: 15px;
+    font-size: 2vw;
     border: 1px solid #000;
     border-radius: 10px;
     cursor: pointer;
@@ -53,10 +59,10 @@
 }
 
 .form__button-submit {
-    width: 50%;
+    width: 70%;
     padding: 15px;
     font-weight: bold;
-    font-size: 1.5rem;
+    font-size: 2vw;
     color: #fff;
     text-align: center;
     background-color: #FF5555;
