--- a/src/public/css/edit.css
+++ b/src/public/css/edit.css
@@ -23,6 +23,7 @@
 
 .form__image {
     margin-bottom: 100px;
+    margin-left: 20%;
 }
 
 .user__image {
@@ -31,6 +32,7 @@
 }
 
 .form__image--button {
+    margin-left: 5%;
     padding: 7px;
     font-weight: bold;
     font-size: 1.8vw;
