--- a/src/public/css/address.css
+++ b/src/public/css/address.css
@@ -27,6 +27,7 @@
     transform: translateX(-2px);
     border: none;
     border-radius: 0px 10px 10px 0px;
+    cursor: pointer;
 }
 
 .form-log {
@@ -41,6 +42,7 @@
     border: none;
     color: #fff;
     background-color: #000;
+    cursor: pointer;
 }
 
 .mypage-link {
@@ -54,6 +56,7 @@
     text-decoration: none;
     color: #fff;
     background-color: #000;
+    cursor: pointer;
 }
 
 .sell-link {
@@ -68,6 +71,7 @@
     border-radius: 10px;
     color: #000;
     background-color: #fff;
+    cursor: pointer;
 }
 
 .address-header {
