--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -55,3 +55,12 @@
     text-decoration: none;
     cursor: pointer;
 }
+
+.form__error {
+    width: 70%;
+    margin-top: 10px;
+    font-size: 2vw;
+    font-weight: bold;
+    text-align: center;
+    color: #FF5555;
+}
