--- a/src/public/css/purchase.css
+++ b/src/public/css/purchase.css
@@ -188,7 +188,7 @@
 
 .postal__number {
     width: 100%;
-    font-size: 1.2vw;
+    font-size: 1.4vw;
     border: none;
     outline: none;
 }
@@ -200,14 +200,14 @@
 
 .user__address--text {
     width: 100%;
-    font-size: 1.2vw;
+    font-size: 1.4vw;
     border: none;
     outline: none;
 }
 
 .user__building--text {
     width: 100%;
-    font-size: 1.2vw;
+    font-size: 1.4vw;
     border: none;
     outline: none;
 }
@@ -262,4 +262,13 @@
     background-color: #FF5555;
     color: #fff;
     cursor: pointer;
+}
+
+.form__error {
+    width: 70%;
+    font-size: 1.5vw;
+    font-weight: bold;
+    text-align: center;
+    color: #FF5555;
+    transform: translateY(-25px);
 }
