--- a/src/public/css/exhibition.css
+++ b/src/public/css/exhibition.css
@@ -275,6 +275,7 @@
 
 .category__list {
     margin-top: 10px;
+    width: 60%;
 }
 
 .category__list--item {
@@ -287,13 +288,18 @@
 }
 
 .category__button {
-    padding: 3px 1.7%;
+    display: inline-block;
+    width: 25%;
+    padding: 3px 5px;
     margin-left: 3%;
-    font-size: 1.2vw;
+    margin-top: 5px;
+    font-size: 1vw;
     font-weight: bold;
+    text-align: center;
     border-radius: 10px;
     border: none;
     background-color: #D9D9D9;
+    white-space: nowrap;
     color: #000;
     outline: none;
 }
