--- a/src/public/css/sell.css
+++ b/src/public/css/sell.css
@@ -167,6 +167,7 @@
     padding: 15px;
     border: 1px solid #000;
     border-radius: 10px;
+    outline: none;
     cursor: pointer;
 }
 
@@ -175,6 +176,33 @@
     padding: 15px;
     border: 1px solid #000;
     border-radius: 10px;
+    outline: none;
+    cursor: pointer;
+}
+
+.price__container {
+    display: flex;
+}
+
+.price--mark {
+    display: flex;
+    width: 5%;
+    height: 50px;
+    border: 1px solid #000;
+    border-radius: 10px 0 0 10px;
+    border-right: none;
+    align-items: center;
+    justify-content: center;
+    font-size: 2vw;
+}
+
+.form__input-price {
+    width: 65%;
+    padding: 15px;
+    border: 1px solid #000;
+    border-radius: 0 10px 10px 0;
+    border-left: none;
+    outline: none;
     cursor: pointer;
 }
 
@@ -184,6 +212,7 @@
     padding: 15px;
     border: 1px solid #000;
     border-radius: 10px;
+    outline: none;
     cursor: pointer;
 }
 
