--- a/src/public/css/edit.css
+++ b/src/public/css/edit.css
@@ -48,11 +48,41 @@
 
 .form__input {
     width: 70%;
+    height: 50px;
     padding: 15px;
     font-size: 2vw;
     border: 1px solid #000;
     border-radius: 10px;
+    outline: none;
     cursor: pointer;
+}
+
+.postal__container {
+    display: flex;
+}
+
+.form__input-postal {
+    width: 65%;
+    height: 50px;
+    padding: 15px;
+    font-size: 2vw;
+    border: 1px solid #000;
+    border-left: none;
+    border-radius: 0px 10px 10px 0px;
+    outline: none;
+    cursor: pointer;
+}
+
+.postal--mark {
+    display: flex;
+    width: 5%;
+    height: 50px;
+    border: 1px solid #000;
+    border-radius: 10px 0 0 10px;
+    border-right: none;
+    align-items: center;
+    justify-content: center;
+    font-size: 2vw;
 }
 
 .form__button {
