--- a/src/public/css/transaction.css
+++ b/src/public/css/transaction.css
@@ -120,6 +120,9 @@
 .person__comment--text {
     width: 80%;
     height: 30px;
+    border: none;
+    background-color: #D9D9D9; 
+    outline: none;
 }
 
 .transaction__image--item {
@@ -135,6 +138,7 @@
     padding-left: 5px;
     height: 35px;
     margin-left: 2%;
+    outline: none;
 }
 
 .transaction__image--button {
@@ -159,8 +163,16 @@
 }
 
 .comment__button {
-    margin: 5% 20% 0 0;
+    margin: 5% 15% 0 0;
     text-align: right;
+}
+
+.comment__button--submit {
+    margin-right: 5%;
+    font-size: 1.2vw;
+    border: none;
+    background-color: #fff;
+    cursor: pointer;
 }
 
 
