--- a/src/public/css/transaction.css
+++ b/src/public/css/transaction.css
@@ -212,6 +212,17 @@
     top: 60%;
 }
 
+.modal-content__seller {
+    width: 50%;
+    padding: 2%;
+    border: 1px solid #000;
+    border-radius: 10px;
+    background-color: #FDFCE6;
+    position: absolute;
+    left: 25%;
+    top: 50%;
+}
+
 .modal-title {
     padding-bottom: 5%;
     font-size: 2vw;
@@ -240,8 +251,8 @@
 
 .category__button::before {
     content: "☆";
-    font-size: 3rem;
-    color: #ccc;
+    font-size: 8vw;
+    color: #D9D9D9;
     transition: color 0.2s;
 }
 
@@ -258,9 +269,11 @@
 
 .modal__link--button {
     padding: 2% 5%;
-    text-decoration: none;
+    border: none;
+    outline: none;
     text-align: right;
     color: #fff;
     border-radius: 10px;
     background-color: #FF5555;
+    cursor: pointer;
 }
